[package]
name = "rusted-reindeer"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-main = { version = "0.5.0", features = ["bench"] }
getset = "0.1.2"
itertools = "0.12.0"

[dev-dependencies]
indoc = "2.0.4"

[profile.release]
overflow-checks = true # To avoid being fooled by a false answer on running `cargo run --release`

[lints.clippy]
# Warn
# suspicious, complexity, perf & style groups are warn-by-default
pedantic = "warn"
unwrap_used = "warn"
# Allow
cast_possible_truncation = "allow" # Used a lot for casting usize to u32 in AoC Problems
map_unwrap_or = "allow"            # This reduces readability; track https://github.com/rust-lang/rust-clippy/issues/10428
